Closed Bug 1814655 Opened 1 year ago Closed 1 year ago

Crash on in mozilla::ExternalEngineStateMachine::RecoverFromCDMProcessCrashIfNeeded()

Categories

(Core :: Audio/Video, defect, P2)

Desktop
Windows
defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: jimm, Assigned: alwu)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Crashes on https://tests.caniuse.com/

https://crash-stats.mozilla.org/report/index/a1ac32b1-6187-4435-962b-2389a0230202

Alastor, not sure who would be best to look at this. Maybe you have some cycles to diagnose.

Flags: needinfo?(alwu)

FYI I have the experimental wmf pipeline enabled.

Blocks: mfcdm
Severity: -- → S3
Blocks: mf-playback
No longer blocks: mfcdm
Flags: needinfo?(alwu)
Assignee: nobody → alwu
OS: Windows 11 → Windows
Priority: -- → P2

As we haven't enabled crash test for wmfme, adding a new test case for
ADTS in the normal media mochitest.

Depends on D168742

Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9db48d5d93be
part1 : add a test case for adts. r=padenot
https://hg.mozilla.org/integration/autoland/rev/6f1c4f8e447d
part2 : handle binary blob from ADTS. r=padenot
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: