Bug 1814655 - part2 : handle binary blob from ADTS. r=padenot

Depends on D168742

Differential Revision: https://phabricator.services.mozilla.com/D168743